# MusicTool

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
docs/: legal-boundaries.md  troubleshooting.md
examples/: bilibili-urls.sample.csv  manifest.sample.json  source_urls.sample.csv  urls.sample.csv
musictool/: __init__.py  bilibili.py  cli.py  filenames.py  ios.py  local_library.py  lyrics.py  manifest.py  manual_urls.py  matcher.py  models.py  qqmusic.py  source_urls.py  sync.py  youtube_music.py
skills/qq-music-ampod-workflow/: SKILL.md
skills/qq-music-ampod-workflow/agents/: openai.yaml
tests/: test_bilibili.py  test_filenames.py  test_ios.py  test_local_library.py  test_lyrics.py  test_manifest.py  test_manual_urls.py  test_matcher.py  test_qqmusic.py  test_source_urls.py  test_sync.py  test_youtube_music.py
