[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "musictool"
version = "0.1.0"
description = "Read public QQ Music playlist metadata, match candidate sources, and organize local music libraries."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "imageio-ffmpeg>=0.6",
    "mutagen>=1.47",
    "pydantic>=2.7",
    "qqmusic-api-python>=0.6.0",
    "rapidfuzz>=3.9",
    "rich>=13.7",
    "typer>=0.12",
    "yt-dlp>=2026.3.17",
    "ytmusicapi>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]

[project.scripts]
musictool = "musictool.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["musictool*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
